프로젝트 완성

--- a/reinno_login/src/main/resources/datasources/datasource.properties
+++ b/reinno_login/src/main/resources/datasources/datasource.properties
@@ -1,7 +1,7 @@
 message.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 message.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-message.datasource.user=reinno_study
-message.datasource.password=1234
+message.datasource.user=root
+message.datasource.password=505015
 message.datasource.pool-name=com.mysql.cj.jdbc.Driver
 message.datasource.max-pool-size=20
 
